--- a/HaoChiBao/app/src/main/res/layout/hot_pot_details_head.xml
+++ b/HaoChiBao/app/src/main/res/layout/hot_pot_details_head.xml
@@ -63,6 +63,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/img"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -74,6 +75,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -85,18 +87,34 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:orientation="horizontal">
+
                     <RatingBar
+                        android:id="@+id/grade"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:numStars="5"
                         android:stepSize="0.5"
                         style="@style/roomRatingBar"
-                        android:rating="4.5"/>
+                        android:rating="3.5"
+                        android:isIndicator="true"
+                        />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="￥50/人" />
+                        android:layout_marginLeft="15dp"
+                        android:text="￥" />
+                    <TextView
+                        android:id="@+id/price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="2dp"
+                        android:text="50" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="2dp"
+                        android:text="/人" />
 
 
                 </LinearLayout>
@@ -108,6 +126,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/location"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/daping" />
@@ -116,7 +135,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="15dp"
-                        android:text="@string/gengduohuoguo" />
+                        android:text="简介：" />
+                    <TextView
+                        android:id="@+id/describe"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:text="够味" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -141,6 +166,7 @@
                 android:text="口味:" />
 
             <TextView
+                android:id="@+id/taste"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="7.9" />
@@ -152,6 +178,7 @@
                 android:text="环境:" />
 
             <TextView
+                android:id="@+id/environment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="7.9" />
@@ -163,6 +190,7 @@
                 android:text="服务:" />
 
             <TextView
+                android:id="@+id/service"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="7.9" />
@@ -234,6 +262,7 @@
                 android:src="@mipmap/particulars_phone" />
 
             <TextView
+                android:id="@+id/phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
