--- a/HaoChiBao/app/src/main/res/layout/item_hotpotlistview.xml
+++ b/HaoChiBao/app/src/main/res/layout/item_hotpotlistview.xml
@@ -28,12 +28,14 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/user_name"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="夏天的风" />
 
                 <TextView
+                    android:id="@+id/time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
@@ -53,17 +55,20 @@
                     android:text="打分" />
 
                 <RatingBar
+                    android:id="@+id/grade"
                     style="@style/roomRatingBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:numStars="5"
                     android:stepSize="0.5"
-                    android:rating="4.5"
+                    android:rating="3.5"
+                    android:isIndicator="true"
                     android:layout_marginLeft="5dp"/>
 
             </LinearLayout>
 
             <TextView
+                android:id="@+id/comment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="아침이 되면 如果早晨到来 제일 처음 너에게 good morning第一个对你说早上好말을 골라
@@ -113,7 +118,6 @@
                     android:text="赞" />
 
                 <TextView
-                    android:id="@+id/support"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="520" />
@@ -125,7 +129,6 @@
                     android:text="评论" />
 
                 <TextView
-                    android:id="@+id/comment"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
