--- a/HaoChiBao/app/src/main/res/layout/activity_register.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_register.xml
@@ -3,132 +3,124 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bgGrayWhite">
-
-    <ScrollView
+    android:background="#f4f3ea">
+    <LinearLayout
+        android:layout_marginTop="35dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
         android:layout_width="match_parent"
+        android:orientation="vertical"
         android:layout_height="wrap_content">
-        <LinearLayout
+        <EditText
+            android:background="@color/white"
+            android:paddingLeft="15dp"
+            android:id="@+id/login_edit"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:drawableLeft="@mipmap/my_tel"
+            android:hint="+86| 手机号:"
+            android:drawablePadding="10dp"
+            android:textColorHint="@color/textGray"
+            android:inputType="number"
+            android:textSize="@dimen/font_28"
+            android:maxLength="11"
+            />
+        <RelativeLayout
+            android:background="@color/white"
+            android:paddingLeft="10dp"
+            android:layout_marginTop="2dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <LinearLayout
-                android:layout_width="match_parent"
+            android:gravity="center_vertical"
+            >
+            <EditText
+                android:id="@+id/login_yanzheng"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:drawableLeft="@mipmap/pen1"
+                android:hint="输入验证码:"
+                android:drawablePadding="10dp"
+                android:textColorHint="@color/textGray"
+                android:inputType="number"
+                android:textSize="@dimen/font_28"
+                android:maxLength="11"
+                />
+            <CheckBox
+                android:button="@null"
+                android:id="@+id/get_yanzheng"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="vertical"
-                android:background="@color/white">
-                <ImageView
-                    android:id="@+id/user_img"
-                    android:layout_width="150dp"
-                    android:layout_height="100dp"
-                    android:src="@mipmap/logo"
-                    android:layout_marginTop="50dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/user_img"
-                    android:gravity="center"
-                    android:text="好吃宝"
-                    android:textSize="@dimen/font_40"
-                    android:textColor="@color/textBlack"/>
-                <TextView
-                    android:id="@+id/more_login"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="登录使用更多功能"
-                    android:textSize="@dimen/font_28"
-                    android:layout_below="@+id/login_btn"
-                    android:layout_marginTop="@dimen/activity_horizontal_margin"
-                    android:layout_marginBottom="35dp"
-                    />
-                <LinearLayout
-                    android:layout_marginTop="30dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginRight="40dp"
-                    android:layout_marginLeft="40dp">
-
-                    <EditText
-                        android:id="@+id/phone_edit"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:drawableLeft="@mipmap/my_tel"
-                        android:hint="手机号:"
-                        android:drawablePadding="10dp"
-                        android:textColorHint="@color/textGray"
-                        android:inputType="number"
-                        android:textSize="@dimen/font_28"
-                        android:maxLength="11"
-                        />
-                    <EditText
-                        android:layout_marginTop="30dp"
-                        android:id="@+id/password_edit"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:drawableLeft="@mipmap/my_lock"
-                        android:hint="密码:"
-                        android:textSize="@dimen/font_28"
-                        android:drawablePadding="10dp"
-                        android:textColorHint="@color/textGray"
-                        android:inputType="textPassword"
-                        />
-
-                    <TextView
-                        android:id="@+id/forget_password"
-                        android:layout_marginTop="15dp"
-                        android:layout_marginBottom="20dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="忘记密码"
-                        android:textColor="@color/textGrayBlack"
-                        android:layout_gravity="right"
-                        android:layout_marginRight="10dp"/>
-                </LinearLayout>
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/login_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/login_btn_style"
-                android:layout_below="@+id/user_img"
-                android:layout_marginTop="80dp"
+                android:text="获取验证码"
+                android:layout_alignBaseline="@+id/login_yanzheng"
+                android:layout_alignBottom="@+id/login_yanzheng"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginRight="30dp"
+                android:background="@drawable/get_yanzheng"
                 android:gravity="center"
-                android:text="登陆"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:layout_gravity="center"
-                android:layout_marginRight="40dp"
-                android:layout_marginLeft="40dp"
-                android:textSize="@dimen/font_36"
-                android:textColor="@color/white"/>
-
-            <RelativeLayout
-                android:layout_marginTop="40dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="40dp"
-                android:layout_marginLeft="40dp"
-                android:layout_marginBottom="20dp">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="注册"
-                    android:textSize="@dimen/font_32"
-                    android:textColor="@color/textGrayBlack"
-                    android:layout_alignParentLeft="true"/>
-                <TextView
-                    android:id="@+id/fast_login"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="快速登陆"
-                    android:textColor="@color/registerOrange"
-                    android:layout_alignParentRight="true"
-                    android:textSize="@dimen/font_32"
-                    android:layout_alignParentTop="true" />
-            </RelativeLayout>
-        </LinearLayout>
-    </ScrollView>
+                android:textColor="@color/white"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"/>
+        </RelativeLayout>
+        <EditText
+            android:background="@color/white"
+            android:paddingLeft="15dp"
+            android:layout_marginTop="2dp"
+            android:id="@+id/login_password"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:drawableLeft="@mipmap/password"
+            android:hint="登录密码"
+            android:drawablePadding="10dp"
+            android:textColorHint="@color/textGray"
+            android:inputType="number"
+            android:textSize="@dimen/font_28"
+            android:maxLength="11"
+            />
+        <EditText
+            android:background="@color/white"
+            android:paddingLeft="15dp"
+            android:layout_marginTop="2dp"
+            android:id="@+id/login_repassword"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:drawableLeft="@mipmap/password"
+            android:hint="确认密码"
+            android:drawablePadding="10dp"
+            android:textColorHint="@color/textGray"
+            android:inputType="number"
+            android:textSize="@dimen/font_28"
+            android:maxLength="11"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="18dp"
+        android:layout_marginTop="20dp">
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="我已阅读并同意"
+            android:button="@drawable/circle_checkbox_style"/>
+    </LinearLayout>
+    <TextView
+        android:id="@+id/login_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/login_btn_style"
+        android:layout_below="@+id/user_img"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:text="注册"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:layout_gravity="center"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:textSize="@dimen/font_36"
+        android:textColor="@color/white"/>
 </LinearLayout>
