--- a/HaoChiBao/app/src/main/res/layout/activity_login.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_login.xml
@@ -1,135 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bgGrayWhite">
+    android:orientation="vertical">
 
-    <ScrollView
+    <android.support.v4.view.ViewPager
+        android:id="@+id/id_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="vertical"
-                android:background="@color/white">
-                <ImageView
-                    android:id="@+id/user_img"
-                    android:layout_width="150dp"
-                    android:layout_height="100dp"
-                    android:src="@mipmap/logo"
-                    android:layout_marginTop="50dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/user_img"
-                    android:gravity="center"
-                    android:text="好吃宝"
-                    android:textSize="@dimen/font_40"
-                    android:textColor="@color/textBlack"/>
-                <TextView
-                    android:id="@+id/more_login"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="登录使用更多功能"
-                    android:textSize="@dimen/font_28"
-                    android:layout_below="@+id/login_btn"
-                    android:layout_marginTop="@dimen/activity_horizontal_margin"
-                    android:layout_marginBottom="35dp"
-                    />
-                <LinearLayout
-                    android:layout_marginTop="30dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginRight="40dp"
-                    android:layout_marginLeft="40dp">
+        android:layout_height="match_parent"
+        >
+    </android.support.v4.view.ViewPager>
 
-                    <EditText
-                        android:id="@+id/phone_edit"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:drawableLeft="@mipmap/my_tel"
-                        android:hint="手机号:"
-                        android:drawablePadding="10dp"
-                        android:textColorHint="@color/textGray"
-                        android:inputType="number"
-                        android:textSize="@dimen/font_28"
-                        android:maxLength="11"
-                        />
-                    <EditText
-                        android:layout_marginTop="30dp"
-                        android:id="@+id/password_edit"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:drawableLeft="@mipmap/my_lock"
-                        android:hint="密码:"
-                        android:textSize="@dimen/font_28"
-                        android:drawablePadding="10dp"
-                        android:textColorHint="@color/textGray"
-                        android:inputType="textPassword"
-                        />
-
-                    <TextView
-                        android:id="@+id/forget_password"
-                        android:layout_marginTop="15dp"
-                        android:layout_marginBottom="20dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="忘记密码"
-                        android:textColor="@color/textGrayBlack"
-                        android:layout_gravity="right"
-                        android:layout_marginRight="10dp"/>
-                </LinearLayout>
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/login_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/login_btn_style"
-                android:layout_below="@+id/user_img"
-                android:layout_marginTop="80dp"
-                android:gravity="center"
-                android:text="登陆"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:layout_gravity="center"
-                android:layout_marginRight="40dp"
-                android:layout_marginLeft="40dp"
-                android:textSize="@dimen/font_36"
-                android:textColor="@color/white"/>
-
-            <RelativeLayout
-                android:layout_marginTop="40dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="40dp"
-                android:layout_marginLeft="40dp"
-                android:layout_marginBottom="20dp">
-                <TextView
-                    android:id="@+id/register"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="注册"
-                    android:textSize="@dimen/font_32"
-                    android:textColor="@color/textGrayBlack"
-                    android:layout_alignParentLeft="true"/>
-                <TextView
-                    android:id="@+id/fast_login"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="快速登陆"
-                    android:textColor="@color/registerOrange"
-                    android:layout_alignParentRight="true"
-                    android:textSize="@dimen/font_32"
-                    android:layout_alignParentTop="true" />
-            </RelativeLayout>
-        </LinearLayout>
-    </ScrollView>
 </LinearLayout>
