--- a/HaoChiBao/app/src/main/res/drawable/get_false.xml
+++ b/HaoChiBao/app/src/main/res/drawable/get_false.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="10dp"/>
-    <solid android:color="#f5f4eb"/>
+    <corners android:radius="5dp"/>
+    <solid android:color="@color/textGrayBlack"/>
 </shape>
