--- a/HaoChiBao/app/src/main/res/layout/activity_register.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_register.xml
@@ -113,6 +113,7 @@
                 android:layout_marginLeft="40dp"
                 android:layout_marginBottom="20dp">
                 <TextView
+                    android:id="@+id/user_register"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="注册"
