--- a/HaoChiBao/app/src/main/res/layout/activity_mine_home_page.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_mine_home_page.xml
@@ -48,6 +48,7 @@
                 android:paddingTop="15dp"
                 android:paddingBottom="15dp">
                 <ImageView
+                    android:id="@+id/user_icon"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:src="@mipmap/my_head_portrait"/>
@@ -82,7 +83,7 @@
                         android:layout_centerInParent="true"/>
 
                     <TextView
-                        android:id="@+id/user_screen_name"
+                        android:id="@+id/user_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="我的令爱ice"
@@ -148,7 +149,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="我的主页"
+                    android:text="我的资料"
                     android:textSize="@dimen/font_40"
                     android:layout_alignParentLeft="true"/>
                 <ImageView
