--- a/HaoChiBao/app/src/main/res/layout/comment_list_item.xml
+++ b/HaoChiBao/app/src/main/res/layout/comment_list_item.xml
@@ -84,33 +84,12 @@
             android:text="全文" />
     </LinearLayout>
 
-    <LinearLayout
+    <com.haochibao.utill.view.FlowLayout
+        android:id="@+id/img_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/img_one"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/my_beauty_photo" />
-
-        <ImageView
-            android:id="@+id/img_two"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:src="@mipmap/my_beauty_photo" />
-
-        <ImageView
-            android:id="@+id/img_three"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:src="@mipmap/my_beauty_photo" />
-    </LinearLayout>
-
+    </com.haochibao.utill.view.FlowLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
