--- a/HaoChiBao/app/src/main/res/layout/activity_mine_collection_lv_item.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_mine_collection_lv_item.xml
@@ -5,47 +5,15 @@
     android:layout_height="wrap_content"
     android:padding="5dp">
     <ImageView
+        android:id="@+id/image_view"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@mipmap/my_beauty_photo"/>
-
     <RelativeLayout
         android:layout_marginLeft="5dp"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="match_parent">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:orientation="horizontal"
-            android:id="@+id/center_seekbar"
-            android:layout_centerInParent="true"
-            android:gravity="center_vertical"
-            >
-            <RatingBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/rating_bar"
-                android:numStars="5"
-                android:rating="3.5"
-                style="@style/roomRatingBar"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="￥50/人"
-                android:layout_marginLeft="20dp"/>
-        </LinearLayout>
-        <TextView
-            android:layout_marginTop="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="编辑个人资料"
-            android:textColor="@color/textGray"
-            android:textSize="@dimen/font_32"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/center_seekbar"/>
         <TextView
             android:layout_marginBottom="5dp"
             android:id="@+id/store_name"
@@ -54,10 +22,9 @@
             android:text="陈眼镜火锅店（石油路店）"
             android:textColor="@color/textBlack"
             android:textSize="@dimen/font_36"
-            android:layout_above="@+id/center_seekbar"
-             />
-
+            />
         <TextView
+            android:id="@+id/distance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="100M"
@@ -65,7 +32,30 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_marginRight="10dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:id="@+id/center_seekbar"
+            android:layout_centerInParent="true"
+            >
+
+            <RatingBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/grade"
+                android:numStars="5"
+                android:rating="3.5"
+                style="@style/smollRatingBar"/>
+            <TextView
+                android:id="@+id/people_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="￥50/人"
+                android:layout_marginLeft="20dp"/>
+        </LinearLayout>
         <TextView
+            android:id="@+id/go_to"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
