--- a/HaoChiBao/app/src/main/res/layout/activity_hotel.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_hotel.xml
@@ -36,11 +36,12 @@
         android:weightSum="1"
         android:gravity="center_horizontal">
         <Spinner
+            android:id="@+id/spinner_one"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:gravity="right"
             android:entries="@array/nearby"
-            android:layout_weight="0.06"></Spinner>
+            android:layout_weight="0.06"/>
         <View
             android:layout_width="1dp"
             android:layout_marginTop="5dp"
@@ -48,10 +49,11 @@
             android:layout_height="match_parent"
             android:background="@color/lineGray"/>
         <Spinner
+            android:id="@+id/spinner_two"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:entries="@array/ranking"
-            android:layout_weight="0.23"></Spinner>
+            android:layout_weight="0.23"/>
     </LinearLayout>
     <ListView
         android:id="@+id/hotel_list"
