--- a/HaoChiBao/app/src/main/res/layout/dialog_fast_login.xml
+++ b/HaoChiBao/app/src/main/res/layout/dialog_fast_login.xml
@@ -18,7 +18,7 @@
             />
 
         <ImageView
-            android:id="@+id/qq_weibo"
+            android:id="@+id/login_weibo"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="80dp"
