--- a/HaoChiBao/app/src/main/res/layout/activity_recommend.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_recommend.xml
@@ -29,11 +29,16 @@
             android:textSize="@dimen/font_36" />
 
     </RelativeLayout>
-    <LinearLayout
+
+    <RadioGroup
+        android:id="@+id/recommend_radiongroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:padding="10dp">
-        <TextView
+        <RadioButton
+            android:id="@+id/recommend_chafing_dish"
+            android:button="@null"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -43,7 +48,9 @@
             android:text="@string/chaffy_dish"
             android:textSize="@dimen/font_32" />
 
-        <TextView
+        <RadioButton
+            android:id="@+id/recommend_self_help"
+            android:button="@null"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -53,7 +60,9 @@
             android:text="@string/self_help"
             android:textSize="@dimen/font_32" />
 
-        <TextView
+        <RadioButton
+            android:id="@+id/recommend_sichuan_cuisine"
+            android:button="@null"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -63,7 +72,9 @@
             android:text="@string/sichuan_dish"
             android:textSize="@dimen/font_32" />
 
-        <TextView
+        <RadioButton
+            android:id="@+id/recommend_snack"
+            android:button="@null"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -72,7 +83,8 @@
             android:gravity="center_horizontal"
             android:text="@string/snack"
             android:textSize="@dimen/font_32" />
-    </LinearLayout>
+    </RadioGroup>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="10dp"
