--- a/HaoChiBao/app/src/main/res/layout/comment_list_item.xml
+++ b/HaoChiBao/app/src/main/res/layout/comment_list_item.xml
@@ -228,26 +228,12 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <com.haochibao.utill.view.InnerListView
+                android:id="@+id/inner_list_view"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="在此风花雪月"
-                android:textColor="@color/mainRed" />
+                android:divider="@null"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=":"
-                android:textColor="@color/mainRed" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/comment_content" />
         </LinearLayout>
-        <com.haochibao.utill.view.InnerListView
-            android:id="@+id/inner_list_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
     </LinearLayout>
 </LinearLayout>
